1、改进了博客的删除功能，此时标签、类型、博客的删除功能逻辑一致 2、优化了删除时的跳转，如果删除前的页面数据大于2条，删除一条后仍然跳转到删除前的页面；如果删除前数据仅剩一条，删除数据后跳转到删除页面的前一页面 3、增加了在用户编写博客时新增标签的功能，当用户输入的标签不存在时，提交博客后后台会将用户提交的新标签进行保存